--- a/src/App.css
+++ b/src/App.css
@@ -35,3 +35,14 @@
     transform: rotate(360deg);
   }
 }
+
+.posts {
+  list-style: none;
+  margin: 0px auto;
+  width: 800px;
+  text-align: left;
+}
+
+.error {
+  color: red;
+}
